# cargo-install-latest

./: Cargo.toml  Readme.md
src/: lib.rs  main.rs
